--- a/templates/contact_for_contract_data.html
+++ b/templates/contact_for_contract_data.html
@@ -1,12 +1,12 @@
 {%extends "template.html"%}
 {% block conteudo%}
-    <h1>Dados Para Contrato</h1>
     <div class="container">
       <div class="page-header">
           <h1>{{ titulo }}</h1>
       </div>
       <form form action="contact_for_contract_data" method="post">
         <fieldset>
+            <legend><h1>Dados Para Contrato</h1></legend>
           <div class="form-group">
             <label for="name">Nome</label>
             <input type="text" id="name" name="name" class="form-control">
@@ -18,6 +18,7 @@
         </fieldset>
 
         <fieldset>
+            <legend>Escolha os anexos</legend>
             <div class="row">
                 {% for file in files_names %}
                     <div class="form-check form-check-inline col-3">
