--- a/templates/welcome_to_your_cont.html
+++ b/templates/welcome_to_your_cont.html
@@ -6,6 +6,7 @@
       </div>
       <form form action="{{url_for('welcome_to_your_cont')}}" method="post">
         <fieldset>
+          <legend>Welcome Email</legend>
           <div class="form-group">
             <label for="name">Nome</label>
             <input type="text" id="name" name="name" class="form-control">
